# cstore

./: .gitignore  Cargo.toml  get.http  req.py  store.http
src/: main.rs  under_the_rug.rs
