[package]
name = "cstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sled = "0.34.7"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }

chacha20poly1305 = "0.9.0"

base64 = "0.13.0"

hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4.11"

tower-http = { version = "0.2.0", features = ["full"] }
